--- a/template/output.html
+++ b/template/output.html
@@ -238,25 +238,25 @@
         <tbody>
           <div style="margin-bottom: 8px;">
                 <a href="https://drive.google.com/file/d/1GM5KUXqPt8h7IftLfr_vE5OwG7WBC0W7/view" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/info-icon-container.jpg?raw&#x3D;true" alt="Info" width="22" height="22">
+                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/info-icon-container.png?raw&#x3D;true" alt="Info" width="22" height="22">
                 </a>
                 <a href="https://gonzalolaw.com/" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/globe-icon-container.jpg?raw&#x3D;true" alt="Website" width="22" height="22">
+                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/globe-icon-container.png?raw&#x3D;true" alt="Website" width="22" height="22">
                 </a>
                 <a href="https://www.linkedin.com/in/nouvelle-gonzalo/" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/linkedin-icon-container.jpg?raw&#x3D;true" alt="LinkedIn" width="22" height="22">
+                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/linkedin-icon-container.png?raw&#x3D;true" alt="LinkedIn" width="22" height="22">
                 </a>
                 <a href="https://www.instagram.com/gonzalolawpllc/" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/insta-icon-container.jpg?raw&#x3D;true" alt="Instagram" width="22" height="22">
+                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/insta-icon-container.png?raw&#x3D;true" alt="Instagram" width="22" height="22">
                 </a>
                 <a href="https://www.youtube.com/@GonzaloLawPLLC?sub_confirmation&#x3D;1" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/youtube-icon-container.jpg?raw&#x3D;true" alt="YouTube" width="22" height="22">
+                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/youtube-icon-container.png?raw&#x3D;true" alt="YouTube" width="22" height="22">
                 </a>
                 <a href="tel:1-855-466-9256" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/phone-icon-container.jpg?raw&#x3D;true" alt="Phone" width="22" height="22">
+                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/phone-icon-container.png?raw&#x3D;true" alt="Phone" width="22" height="22">
                 </a>
                 <a href="mailto:ngonzalo@gonzalolaw.com" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/email-icon-container.jpg?raw&#x3D;true" alt="Email" width="22" height="22">
+                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/email-icon-container.png?raw&#x3D;true" alt="Email" width="22" height="22">
                 </a>
             </div>
         </tbody>
@@ -434,25 +434,25 @@
               <tr>
                   <td style="white-space: nowrap; padding-right: 8px;">
                     <a href="https://www.google.com/maps/place/Gonzalo+Law+Miami/@25.7612322,-80.1936558,17z/data&#x3D;!3m2!4b1!5s0x88db8059298cca51:0x3baf46daaa122580!4m6!3m5!1s0x88d9b755508c5a73:0x7b86035a9f7e601c!8m2!3d25.7612274!4d-80.1910809!16s%2Fg%2F11rmq9hk5z?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
-                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/pin-icon.svg?raw=true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/location-pin-v2.png?raw&#x3D;true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
                       <span>Miami</span>
                     </a>
                   </td>
                   <td style="white-space: nowrap; padding-right: 8px;">
                     <a href="https://www.google.com/maps/place/250+Park+Ave+%237th,+New+York,+NY+10017,+USA/@40.7551183,-73.9785697,17z/data&#x3D;!3m1!4b1!4m6!3m5!1s0x89c258fdebddb677:0xa779d92ce5daaa58!8m2!3d40.7551143!4d-73.9759948!16s%2Fg%2F11lkj5k_4w?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
-                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/pin-icon.svg?raw=true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/location-pin-v2.png?raw&#x3D;true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
                       <span>New York</span>
                     </a>
                   </td>
                   <td style="white-space: nowrap; padding-right: 8px;">
                     <a href="https://www.google.com/maps/place/Gonzalo+Law+-+Ohio/@41.5013866,-81.6911661,17.88z/data&#x3D;!3m1!5s0x8830e157c586f7a5:0xf55a56096740a787!4m14!1m7!3m6!1s0x8830fa7f9502942b:0x5717885f83f1e3d6!2s600+Superior+Ave+E+%231300,+Cleveland,+OH+44114,+USA!3b1!8m2!3d41.5013147!4d-81.6897723!3m5!1s0x8830fa7f9426e30d:0xc306b3af3fa521e3!8m2!3d41.50138!4d-81.6895733!16s%2Fg%2F1tgkhycm?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
-                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/pin-icon.svg?raw=true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/location-pin-v2.png?raw&#x3D;true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
                       <span>Cleveland</span>
                     </a>
                   </td>
                   <td style="white-space: nowrap; padding-right: 8px;">
                     <a href="https://www.google.com/maps/place/747+SW+2nd+Ave+%23190b,+Gainesville,+FL+32601,+USA/@29.6499443,-82.3356049,17z/data&#x3D;!3m1!4b1!4m5!3m4!1s0x88e8a38fbec1e0e1:0xe54e967c4b78ca81!8m2!3d29.6499397!4d-82.33303?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
-                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/pin-icon.svg?raw=true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/location-pin-v2.png?raw&#x3D;true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
                       <span>Gainesville</span>
                     </a>
                   </td>
@@ -466,7 +466,7 @@
                         <!-- TODO: If last badge then no padding-bottom -->
                         <td style="padding-bottom: 6px;">
                           <div class="badge-cell">
-                            <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/award-icon.jpg?raw&#x3D;true" alt="Super Lawyers" width="14" height="14" style="vertical-align: middle; display: inline-block;">
+                            <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/award-icon.png?raw&#x3D;true" alt="Super Lawyers" width="14" height="14" style="vertical-align: middle; display: inline-block;">
                             <span>Super Lawyers Awardee</span>
                           </div>
                         </td>
@@ -475,7 +475,7 @@
                         <!-- TODO: If last badge then no padding-bottom -->
                         <td style="padding-bottom: 6px;">
                           <div class="badge-cell">
-                            <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/award-icon.jpg?raw&#x3D;true" alt="Award" width="14" height="14" style="vertical-align: middle; display: inline-block;">
+                            <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/award-icon.png?raw&#x3D;true" alt="Award" width="14" height="14" style="vertical-align: middle; display: inline-block;">
                             <span>100 Most Influential Women</span>
                           </div>
                         </td>
@@ -491,7 +491,7 @@
                         <td style="padding-bottom: 6px;">
                           <div class="badge-cell">
                             <a href="https://youtu.be/QkpH94lSvXs?si&#x3D;2wxHwgm8LorSLLqm">
-                              <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/play-icon.jpg?raw&#x3D;true" alt="Bloomberg" width="14" height="14" style="vertical-align: middle; display: inline-block;">
+                              <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/play-icon.png?raw&#x3D;true" alt="Bloomberg" width="14" height="14" style="vertical-align: middle; display: inline-block;">
                               <span>As seen on Bloomberg Business</span>
                             </a>
                           </div>
@@ -502,7 +502,7 @@
                         <td style="padding-bottom: 6px;">
                           <div class="badge-cell">
                             <a href="https://www.instagram.com/reel/DFdlS0Vpza-/?utm_source&#x3D;ig_web_copy_link&amp;igsh&#x3D;MzRlODBiNWFlZA&#x3D;&#x3D;">
-                              <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/play-icon.jpg?raw&#x3D;true" alt="Pro-Bono Program" width="14" height="14" style="vertical-align: middle; display: inline-block;">
+                              <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/play-icon.png?raw&#x3D;true" alt="Pro-Bono Program" width="14" height="14" style="vertical-align: middle; display: inline-block;">
                               <span>About our Pro-Bono Law Program</span>
                             </a>
                           </div>
