--- a/template/output.html
+++ b/template/output.html
@@ -41,15 +41,15 @@
     
     <style type="text/css">
       @media only screen and (min-width:500px) {
-        .mj-column-per-100 { width:100% !important; max-width: 100%; }
-.mj-column-px-125 { width:125px !important; max-width: 125px; }
+        .mj-column-px-125 { width:125px !important; max-width: 125px; }
 .mj-column-per-75 { width:75% !important; max-width: 75%; }
+.mj-column-per-100 { width:100% !important; max-width: 100%; }
       }
     </style>
     <style media="screen and (min-width:500px)">
-      .moz-text-html .mj-column-per-100 { width:100% !important; max-width: 100%; }
-.moz-text-html .mj-column-px-125 { width:125px !important; max-width: 125px; }
+      .moz-text-html .mj-column-px-125 { width:125px !important; max-width: 125px; }
 .moz-text-html .mj-column-per-75 { width:75% !important; max-width: 75%; }
+.moz-text-html .mj-column-per-100 { width:100% !important; max-width: 100%; }
     </style>
     
     
@@ -205,81 +205,7 @@
               >
                 <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><![endif]-->
                   
-      <!-- Social Icons Row -->
-          <!--[if mso | IE]><tr><td class="" width="550px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:550px;" width="550" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-    
-      
-      <div  style="margin:0px auto;max-width:550px;">
-        
-        <table
-           align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
-        >
-          <tbody>
-            <tr>
-              <td
-                 style="direction:ltr;font-size:0px;padding:0;text-align:center;"
-              >
-                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:550px;" ><![endif]-->
-            
-      <div
-         class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
-      >
-        
-      <table
-         border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%"
-      >
-        <tbody>
-          <tr>
-            <td  style="vertical-align:top;padding:0;">
-              
-      <table
-         border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%"
-      >
-        <tbody>
-          <div style="margin-bottom: 8px;">
-                <a href="https://drive.google.com/file/d/1GM5KUXqPt8h7IftLfr_vE5OwG7WBC0W7/view" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/info-icon-container.png?raw&#x3D;true" alt="Info" width="22" height="22">
-                </a>
-                <a href="https://gonzalolaw.com/" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/globe-icon-container.png?raw&#x3D;true" alt="Website" width="22" height="22">
-                </a>
-                <a href="https://www.linkedin.com/in/nouvelle-gonzalo/" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/linkedin-icon-container.png?raw&#x3D;true" alt="LinkedIn" width="22" height="22">
-                </a>
-                <a href="https://www.instagram.com/gonzalolawpllc/" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/insta-icon-container.png?raw&#x3D;true" alt="Instagram" width="22" height="22">
-                </a>
-                <a href="https://www.youtube.com/@GonzaloLawPLLC?sub_confirmation&#x3D;1" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/youtube-icon-container.png?raw&#x3D;true" alt="YouTube" width="22" height="22">
-                </a>
-                <a href="tel:1-855-466-9256" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/phone-icon-container.png?raw&#x3D;true" alt="Phone" width="22" height="22">
-                </a>
-                <a href="mailto:ngonzalo@gonzalolaw.com" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/email-icon-container.png?raw&#x3D;true" alt="Email" width="22" height="22">
-                </a>
-            </div>
-        </tbody>
-      </table>
-    
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    
-      </div>
-    
-          <!--[if mso | IE]></td></tr></table><![endif]-->
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        
-      </div>
-    
-      
-      <!--[if mso | IE]></td></tr></table></td></tr><![endif]-->
-        <!-- Main Content -->
+      <!-- Main Content -->
           <!--[if mso | IE]><tr><td class="main-content-outlook" width="550px" ><![endif]-->
             
       <table
@@ -336,7 +262,7 @@
             <td  style="width:113px;">
               
       <img
-         alt="Nouvelle L. Gonzalo" src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/display-picture.jpg?raw&#x3D;true" style="border:1px solid #DCC3A1;border-radius:12px;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="113" height="auto"
+         alt="Nouvelle L. Gonzalo" src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v3/display-picture.jpg?raw&#x3D;true" style="border:1px solid #DCC3A1;border-radius:12px;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="113" height="auto"
       />
     
             </td>
@@ -412,7 +338,45 @@
     
                 </td>
               </tr>
-            <!-- Services --><table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
+            <!-- Social Icons Row --><table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
+              <tr>
+                  <td>
+                    <a href="https://drive.google.com/file/d/1GM5KUXqPt8h7IftLfr_vE5OwG7WBC0W7/view" target="_blank" class="social-icons">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/info-icon-container.png?raw&#x3D;true" alt="Info" width="22" height="22">
+                    </a>
+                  </td>
+                  <td>
+                    <a href="https://gonzalolaw.com/" target="_blank" class="social-icons">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/globe-icon-container.png?raw&#x3D;true" alt="Website" width="22" height="22">
+                    </a>
+                  </td>
+                  <td>
+                    <a href="https://www.linkedin.com/in/nouvelle-gonzalo/" target="_blank" class="social-icons">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/linkedin-icon-container.png?raw&#x3D;true" alt="LinkedIn" width="22" height="22">
+                    </a>
+                  </td>
+                  <td>
+                    <a href="https://www.instagram.com/gonzalolawpllc/" target="_blank" class="social-icons">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/insta-icon-container.png?raw&#x3D;true" alt="Instagram" width="22" height="22">
+                    </a>
+                  </td>
+                  <td>
+                    <a href="https://www.youtube.com/@GonzaloLawPLLC?sub_confirmation&#x3D;1" target="_blank" class="social-icons">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/youtube-icon-container.png?raw&#x3D;true" alt="YouTube" width="22" height="22">
+                    </a>
+                  </td>
+                  <td>
+                    <a href="tel:1-855-466-9256" target="_blank" class="social-icons">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/phone-icon-container.png?raw&#x3D;true" alt="Phone" width="22" height="22">
+                    </a>
+                  </td>
+                  <td>
+                    <a href="mailto:ngonzalo@gonzalolaw.com" target="_blank" class="social-icons">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/email-icon-container.png?raw&#x3D;true" alt="Email" width="22" height="22">
+                    </a>
+                  </td>
+              </tr>
+            </table><!-- Services --><table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
               <tr>
                   <td class="service-tag">
                     <span>International</span>
