--- a/template/output.html
+++ b/template/output.html
@@ -376,7 +376,65 @@
                     </a>
                   </td>
               </tr>
-            </table><!-- Services --><table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
+            </table>
+        </tbody>
+      </table>
+    
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    
+      </div>
+    
+          <!--[if mso | IE]></td></tr></table><![endif]-->
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        
+      </div>
+    
+        
+      <!--[if mso | IE]></td></tr></table><![endif]-->
+    
+      
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    
+          <!--[if mso | IE]></td></tr><tr><td class="" width="550px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:550px;" width="550" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+    
+      
+      <div  style="margin:0px auto;max-width:550px;">
+        
+        <table
+           align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
+        >
+          <tbody>
+            <tr>
+              <td
+                 style="direction:ltr;font-size:0px;padding:0;text-align:center;"
+              >
+                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:550px;" ><![endif]-->
+            
+      <div
+         class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
+      >
+        
+      <table
+         border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%"
+      >
+        <tbody>
+          <tr>
+            <td  style="vertical-align:top;padding:0;">
+              
+      <table
+         border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%"
+      >
+        <tbody>
+          <!-- Services --><table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
               <tr>
                   <td class="service-tag">
                     <span>International</span>
@@ -494,17 +552,9 @@
         
       </div>
     
-        
-      <!--[if mso | IE]></td></tr></table><![endif]-->
-    
       
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    
-          <!--[if mso | IE]></td></tr><![endif]-->
-        <!-- Disclaimer --><div class="disclaimer-wrapper">
+      <!--[if mso | IE]></td></tr></table></td></tr><![endif]-->
+        <!-- Disclaimer -->
           <!--[if mso | IE]><tr><td class="" width="550px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:550px;" width="550" bgcolor="hsl(35, 94%, 90%)" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     
       
@@ -518,7 +568,9 @@
               <td
                  style="direction:ltr;font-size:0px;padding:0;text-align:center;"
               >
-                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:550px;" ><![endif]-->
+                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><![endif]-->
+      <div class="disclaimer-wrapper">
+          <!--[if mso | IE]><td class="" style="vertical-align:top;width:550px;" ><![endif]-->
             
       <div
          class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
@@ -558,7 +610,10 @@
     
       </div>
     
-          <!--[if mso | IE]></td></tr></table><![endif]-->
+          <!--[if mso | IE]></td><![endif]-->
+    </div>
+
+      <!--[if mso | IE]></tr></table><![endif]-->
               </td>
             </tr>
           </tbody>
@@ -567,10 +622,7 @@
       </div>
     
       
-      <!--[if mso | IE]></td></tr></table></td></tr><![endif]-->
-        </div>
-    
-                <!--[if mso | IE]></table><![endif]-->
+      <!--[if mso | IE]></td></tr></table></td></tr></table><![endif]-->
               </td>
             </tr>
           </tbody>
