--- a/template/output.html
+++ b/template/output.html
@@ -41,13 +41,13 @@
     
     <style type="text/css">
       @media only screen and (min-width:500px) {
-        .mj-column-px-125 { width:125px !important; max-width: 125px; }
+        .mj-column-px-100 { width:100px !important; max-width: 100px; }
 .mj-column-per-75 { width:75% !important; max-width: 75%; }
 .mj-column-per-100 { width:100% !important; max-width: 100%; }
       }
     </style>
     <style media="screen and (min-width:500px)">
-      .moz-text-html .mj-column-px-125 { width:125px !important; max-width: 125px; }
+      .moz-text-html .mj-column-px-100 { width:100px !important; max-width: 100px; }
 .moz-text-html .mj-column-per-75 { width:75% !important; max-width: 75%; }
 .moz-text-html .mj-column-per-100 { width:100% !important; max-width: 100%; }
     </style>
@@ -190,10 +190,10 @@
       >
         
       
-      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:550px;" width="550" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:420px;" width="420" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     
       
-      <div  style="margin:0px auto;max-width:550px;">
+      <div  style="margin:0px auto;max-width:420px;">
         
         <table
            align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
@@ -206,7 +206,7 @@
                 <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><![endif]-->
                   
       <!-- Main Content -->
-          <!--[if mso | IE]><tr><td class="main-content-outlook" width="550px" ><![endif]-->
+          <!--[if mso | IE]><tr><td class="main-content-outlook" width="420px" ><![endif]-->
             
       <table
          align="center" class="main-content" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
@@ -216,10 +216,10 @@
             <td>
               
         
-      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="main-content-outlook" role="presentation" style="width:550px;" width="550" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="main-content-outlook" role="presentation" style="width:420px;" width="420" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     
         
-      <div  style="margin:0px auto;max-width:550px;">
+      <div  style="margin:0px auto;max-width:420px;">
         
         <table
            align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
@@ -231,10 +231,10 @@
               >
                 <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><![endif]-->
       <!-- Profile Picture Column -->
-          <!--[if mso | IE]><td class="profile-image-outlook" style="vertical-align:top;width:125px;" ><![endif]-->
+          <!--[if mso | IE]><td class="profile-image-outlook" style="vertical-align:top;width:100px;" ><![endif]-->
             
       <div
-         class="mj-column-px-125 mj-outlook-group-fix profile-image" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
+         class="mj-column-px-100 mj-outlook-group-fix profile-image" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
       >
         
       <table
@@ -259,10 +259,10 @@
       >
         <tbody>
           <tr>
-            <td  style="width:113px;">
+            <td  style="width:88px;">
               
       <img
-         alt="Nouvelle L. Gonzalo" src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v3/display-picture.jpg?raw&#x3D;true" style="border:1px solid #DCC3A1;border-radius:12px;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="113" height="auto"
+         alt="Nouvelle L. Gonzalo" src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v3/display-picture.jpg?raw&#x3D;true" style="border:1px solid #DCC3A1;border-radius:12px;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="88" height="auto"
       />
     
             </td>
@@ -285,7 +285,7 @@
     
           <!--[if mso | IE]></td><![endif]-->
     <!-- Main Content Column -->
-          <!--[if mso | IE]><td class="main-content-column-outlook" style="vertical-align:top;width:412.5px;" ><![endif]-->
+          <!--[if mso | IE]><td class="main-content-column-outlook" style="vertical-align:top;width:315px;" ><![endif]-->
             
       <div
          class="mj-column-per-75 mj-outlook-group-fix main-content-column" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
@@ -302,14 +302,14 @@
          border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%"
       >
         <tbody>
-          
+          <!-- Basic Info -->
               <tr>
                 <td
                    align="left" style="font-size:0px;padding:0;padding-bottom:2px;word-break:break-word;"
                 >
                   
       <div
-         style="font-family:Poppins, sans-serif;font-size:20px;font-weight:600;line-height:1;text-align:left;color:#2A2042;"
+         style="font-family:Poppins, sans-serif;font-size:22px;font-weight:600;letter-spacing:0.02em;line-height:1.2;text-align:left;color:#423267;"
       >Nouvelle L. Gonzalo, Esq.</div>
     
                 </td>
@@ -321,7 +321,7 @@
                 >
                   
       <div
-         style="font-family:Poppins, sans-serif;font-size:14px;line-height:1;text-align:left;color:#7059A6;"
+         style="font-family:Poppins, sans-serif;font-size:16px;font-weight:300;line-height:1.2;text-align:left;color:#8C7AB8;"
       >Founder and Managing Attorney</div>
     
                 </td>
@@ -329,11 +329,11 @@
             
               <tr>
                 <td
-                   align="left" style="font-size:0px;padding:0;padding-bottom:2px;word-break:break-word;"
+                   align="left" style="font-size:0px;padding:0;padding-bottom:4px;word-break:break-word;"
                 >
                   
       <div
-         style="font-family:Poppins, sans-serif;font-size:12px;line-height:1;text-align:left;color:#EE8C3A;"
+         style="font-family:Poppins, sans-serif;font-size:14px;line-height:1.2;text-align:left;color:#EE8C3A;"
       >Gonzalo Law PLLC</div>
     
                 </td>
@@ -342,37 +342,37 @@
               <tr>
                   <td>
                     <a href="https://drive.google.com/file/d/1GM5KUXqPt8h7IftLfr_vE5OwG7WBC0W7/view" target="_blank" class="social-icons">
-                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/info-icon-container.png?raw&#x3D;true" alt="Info" width="22" height="22">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/info-icon-container.png?raw&#x3D;true" alt="Info" width="24" height="24">
                     </a>
                   </td>
                   <td>
                     <a href="https://gonzalolaw.com/" target="_blank" class="social-icons">
-                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/globe-icon-container.png?raw&#x3D;true" alt="Website" width="22" height="22">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/globe-icon-container.png?raw&#x3D;true" alt="Website" width="24" height="24">
                     </a>
                   </td>
                   <td>
                     <a href="https://www.linkedin.com/in/nouvelle-gonzalo/" target="_blank" class="social-icons">
-                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/linkedin-icon-container.png?raw&#x3D;true" alt="LinkedIn" width="22" height="22">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/linkedin-icon-container.png?raw&#x3D;true" alt="LinkedIn" width="24" height="24">
                     </a>
                   </td>
                   <td>
                     <a href="https://www.instagram.com/gonzalolawpllc/" target="_blank" class="social-icons">
-                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/insta-icon-container.png?raw&#x3D;true" alt="Instagram" width="22" height="22">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/insta-icon-container.png?raw&#x3D;true" alt="Instagram" width="24" height="24">
                     </a>
                   </td>
                   <td>
                     <a href="https://www.youtube.com/@GonzaloLawPLLC?sub_confirmation&#x3D;1" target="_blank" class="social-icons">
-                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/youtube-icon-container.png?raw&#x3D;true" alt="YouTube" width="22" height="22">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/youtube-icon-container.png?raw&#x3D;true" alt="YouTube" width="24" height="24">
                     </a>
                   </td>
                   <td>
                     <a href="tel:1-855-466-9256" target="_blank" class="social-icons">
-                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/phone-icon-container.png?raw&#x3D;true" alt="Phone" width="22" height="22">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/phone-icon-container.png?raw&#x3D;true" alt="Phone" width="24" height="24">
                     </a>
                   </td>
                   <td>
                     <a href="mailto:ngonzalo@gonzalolaw.com" target="_blank" class="social-icons">
-                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/email-icon-container.png?raw&#x3D;true" alt="Email" width="22" height="22">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/email-icon-container.png?raw&#x3D;true" alt="Email" width="24" height="24">
                     </a>
                   </td>
               </tr>
@@ -404,10 +404,10 @@
         </tbody>
       </table>
     
-          <!--[if mso | IE]></td></tr><tr><td class="" width="550px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:550px;" width="550" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+          <!--[if mso | IE]></td></tr><tr><td class="" width="420px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:420px;" width="420" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     
       
-      <div  style="margin:0px auto;max-width:550px;">
+      <div  style="margin:0px auto;max-width:420px;">
         
         <table
            align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
@@ -417,7 +417,7 @@
               <td
                  style="direction:ltr;font-size:0px;padding:0;text-align:center;"
               >
-                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:550px;" ><![endif]-->
+                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:420px;" ><![endif]-->
             
       <div
          class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
@@ -434,25 +434,7 @@
          border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%"
       >
         <tbody>
-          <!-- Services --><table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
-              <tr>
-                  <td class="service-tag">
-                    <span>International</span>
-                  </td>
-                  <td class="service-tag">
-                    <span>Non-Profits</span>
-                  </td>
-                  <td class="service-tag">
-                    <span>M&amp;A</span>
-                  </td>
-                  <td class="service-tag">
-                    <span>Contracts</span>
-                  </td>
-                  <td class="service-tag">
-                    <span>IP</span>
-                  </td>
-              </tr>
-            </table><!-- Locations --><table cellpadding="0" cellspacing="0" border="0" style="margin: 8px 0;">
+          <!-- Locations --><table cellpadding="0" cellspacing="0" border="0" style="margin: 4px 0 12px;">
               <tr>
                   <td style="white-space: nowrap; padding-right: 8px;">
                     <a href="https://www.google.com/maps/place/Gonzalo+Law+Miami/@25.7612322,-80.1936558,17z/data&#x3D;!3m2!4b1!5s0x88db8059298cca51:0x3baf46daaa122580!4m6!3m5!1s0x88d9b755508c5a73:0x7b86035a9f7e601c!8m2!3d25.7612274!4d-80.1910809!16s%2Fg%2F11rmq9hk5z?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
@@ -479,7 +461,25 @@
                     </a>
                   </td>
               </tr>
-            </table><!-- Badges --><table cellpadding="0" cellspacing="0" border="0" style="margin-top: 8px;">
+            </table><!-- Services --><table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
+              <tr>
+                  <td class="service-tag">
+                    <span>International</span>
+                  </td>
+                  <td class="service-tag">
+                    <span>Non-Profits</span>
+                  </td>
+                  <td class="service-tag">
+                    <span>M&amp;A</span>
+                  </td>
+                  <td class="service-tag">
+                    <span>Contracts</span>
+                  </td>
+                  <td class="service-tag">
+                    <span>IP</span>
+                  </td>
+              </tr>
+            </table><!-- Badges --><table cellpadding="0" cellspacing="0" border="0" style="margin: 8px 0;">
               <tr>
                 <!-- Awards Column -->
                 <td style="padding-right: 16px; vertical-align: top;" class="awards-column">
@@ -555,10 +555,10 @@
       
       <!--[if mso | IE]></td></tr></table></td></tr><![endif]-->
         <!-- Disclaimer -->
-          <!--[if mso | IE]><tr><td class="" width="550px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:550px;" width="550" bgcolor="hsl(35, 94%, 90%)" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+          <!--[if mso | IE]><tr><td class="" width="420px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:420px;" width="420" bgcolor="hsl(35, 94%, 90%)" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     
       
-      <div  style="background:hsl(35, 94%, 90%);background-color:hsl(35, 94%, 90%);margin:0px auto;max-width:550px;">
+      <div  style="background:hsl(35, 94%, 90%);background-color:hsl(35, 94%, 90%);margin:0px auto;max-width:420px;">
         
         <table
            align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:hsl(35, 94%, 90%);background-color:hsl(35, 94%, 90%);width:100%;"
@@ -569,8 +569,9 @@
                  style="direction:ltr;font-size:0px;padding:0;text-align:center;"
               >
                 <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><![endif]-->
-      <div class="disclaimer-wrapper">
-          <!--[if mso | IE]><td class="" style="vertical-align:top;width:550px;" ><![endif]-->
+      <!-- Review: Fix this hack -->
+          <div class="disclaimer-wrapper">
+          <!--[if mso | IE]><td class="" style="vertical-align:top;width:420px;" ><![endif]-->
             
       <div
          class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
