--- a/template/input-v2.mjml
+++ b/template/input-v2.mjml
@@ -10,14 +10,13 @@
     <mj-attributes>
       <mj-all font-family="Poppins, sans-serif" padding="0" />
       <mj-text color="#2B2147" align="left" padding="0" />
-      <mj-wrapper padding="0" />
-      <mj-section padding="0" />
+      <mj-section padding="0" full-width text-align="left" css-class="left-align-section" />
       <mj-column padding="0" />
-
     </mj-attributes>
 
     <!-- Information Attributes -->
     <mj-attributes>
+
       <!-- Title: 14*1.5=21px -->
       <mj-class name="title" font-size="22px" font-weight="600" letter-spacing="0.02em" line-height="1.2" padding-bottom="2px" color="#423267" />
       <!-- Subtitle: 8*1.5=12px -->
@@ -30,11 +29,7 @@
       <mj-class name="disclaimer-section" background-color="hsl(35, 94%, 90%)" padding="0" />
 
       <mj-class name="disclaimer" font-size="10px" color="hsl(35, 94%, 5%)" line-height="1.25" letter-spacing="0.02em" font-style="italic" padding="4px 6px" />
-
     </mj-attributes>
-
-
-
 
     <!-- Custom CSS -->
     <mj-style>
@@ -47,8 +42,10 @@
       */
       }
 
-      .main-content {
-        margin-bottom: 10px;
+      .left-align-section {
+        margin: 0 !important;
+        padding: 0;
+        box-sizing: border-box;
       }
 
 
@@ -135,173 +132,137 @@
         border-radius: 4px;
         overflow: hidden;
       }
-
-      @media (max-width:500px) {
-        .profile-image {
-          display: none !important;
-        }
-
-        .main-content-column {
-          width: 100% !important;
-        }
-      }
     </mj-style>
 
     <!-- Variables -->
     <mj-preview>Nouvelle L. Gonzalo - Email Signature</mj-preview>
   </mj-head>
 
-  <mj-body width="420px" background-color="#FFFFFF">
-    <mj-wrapper>
+  <!-- ! To Achieve the Left-Aligned Email, the output HTML styles must be updated manually as MJML does not support left-aligned content/email. We just need to remove the auto margin for the container-->
+  <mj-body width="420px">
 
-      <!-- Main Content -->
-      <mj-section css-class="main-content" padding="0" full-width="full-width" text-align="left">
+    <!-- Main Content -->
+    <mj-section>
+      <!-- Profile Picture Column -->
+      <mj-column width="100px" vertical-align="top" padding="0" css-class="profile-image">
+        <mj-image src="{{profile.photo.url}}" alt="{{profile.photo.alt}}" border-radius="12px" border="1px solid #DCC3A1" padding-right="10px" align="left" />
+      </mj-column>
 
-        <!-- Profile Picture Column -->
-        <mj-column width="100px" vertical-align="top" padding="0" css-class="profile-image">
-          <mj-image src="{{profile.photo.url}}" alt="{{profile.photo.alt}}" border-radius="12px" border="1px solid #DCC3A1" padding-right="10px" align="left" />
-        </mj-column>
+      <!-- Main Content Column -->
+      <mj-column width="75%" vertical-align="top" css-class="basic-content-column">
+        <!-- Basic Info -->
+        <mj-text mj-class="title">
+          {{profile.name}}
+        </mj-text>
 
-        <!-- Main Content Column -->
-        <mj-column width="75%" vertical-align="top" css-class="main-content-column">
+        <mj-text mj-class="subtitle">
+          {{profile.title}}
+        </mj-text>
 
+        <mj-text mj-class="company">
+          {{profile.company}}
+        </mj-text>
 
+        <!-- Social Icons Row -->
+        <mj-raw>
+          <table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
+            <tr>
+              {{#each socialLinks}}
+                <td>
+                  <a href="{{url}}" target="_blank" class="social-icons">
+                    <img src="{{icon}}" alt="{{alt}}" width="24" height="24">
+                  </a>
+                </td>
+              {{/each}}
+            </tr>
+          </table>
+        </mj-raw>
+      </mj-column>
+    </mj-section>
 
-          <!-- Basic Info -->
-          <mj-text mj-class="title">
-            {{profile.name}}
-          </mj-text>
+    <!-- Business Information -->
+    <mj-section>
+      <mj-column>
+        <!-- Locations -->
+        <mj-raw>
+          <table cellpadding="0" cellspacing="0" border="0" style="margin: 8px 0 12px;">
+            <tr>
+              {{#each locations}}
+                <td style="white-space: nowrap; padding-right: 8px;">
+                  <a href="{{mapUrl}}" class="location-link">
+                    <img src="{{../locationIcon}}" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
+                    <span>{{name}}</span>
+                  </a>
+                </td>
+              {{/each}}
+            </tr>
+          </table>
+        </mj-raw>
 
-          <mj-text mj-class="subtitle">
-            {{profile.title}}
-          </mj-text>
+        <!-- Services -->
+        <mj-raw>
+          <table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
+            <tr>
+              {{#each services}}
+                <td class="service-tag">
+                  <span>{{this}}</span>
+                </td>
+              {{/each}}
+            </tr>
+          </table>
+        </mj-raw>
 
-          <mj-text mj-class="company">
-            {{profile.company}}
-          </mj-text>
+        <!-- Badges -->
+        <mj-raw>
+          <table cellpadding="0" cellspacing="0" border="0" style="margin: 8px 0;">
+            <tr>
+              <!-- Awards Column -->
+              <td style="padding-right: 16px; vertical-align: top;" class="awards-column">
+                <table cellspacing="0" border="0">
+                  {{#each badges.awards}}
+                    <tr>
+                      <td style="padding-bottom: 6px;">
+                        <div class="badge-cell">
+                          <img src="{{icon}}" alt="{{alt}}" width="14" height="14" style="vertical-align: middle; display: inline-block;">
+                          <span>{{text}}</span>
+                        </div>
+                      </td>
+                    </tr>
+                  {{/each}}
+                </table>
+              </td>
 
-
-
-
-          <!-- Social Icons Row -->
-          <mj-raw>
-            <table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
-              <tr>
-                {{#each socialLinks}}
-                  <td>
-                    <a href="{{url}}" target="_blank" class="social-icons">
-                      <img src="{{icon}}" alt="{{alt}}" width="24" height="24">
-                    </a>
-                  </td>
-                {{/each}}
-              </tr>
-            </table>
-          </mj-raw>
-
-
-
-        </mj-column>
-
-      </mj-section>
-
-      <mj-section>
-        <mj-column>
-
-
-          <!-- Locations -->
-          <mj-raw>
-            <table cellpadding="0" cellspacing="0" border="0" style="margin: 4px 0 12px;">
-              <tr>
-                {{#each locations}}
-                  <td style="white-space: nowrap; padding-right: 8px;">
-                    <a href="{{mapUrl}}" class="location-link">
-                      <img src="{{../locationIcon}}" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
-                      <span>{{name}}</span>
-                    </a>
-                  </td>
-                {{/each}}
-              </tr>
-            </table>
-          </mj-raw>
-
-
-          <!-- Services -->
-          <mj-raw>
-            <table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
-              <tr>
-                {{#each services}}
-                  <td class="service-tag">
-                    <span>{{this}}</span>
-                  </td>
-                {{/each}}
-              </tr>
-            </table>
-          </mj-raw>
-
-
-          <!-- Badges -->
-          <mj-raw>
-            <table cellpadding="0" cellspacing="0" border="0" style="margin: 8px 0;">
-              <tr>
-                <!-- Awards Column -->
-                <td style="padding-right: 16px; vertical-align: top;" class="awards-column">
-                  <table cellspacing="0" border="0">
-                    {{#each badges.awards}}
-                      <tr>
-                        <!-- TODO: If last badge then no padding-bottom -->
-                        <td style="padding-bottom: 6px;">
-                          <div class="badge-cell">
+              <!-- Media Column -->
+              <td style="vertical-align: top;" class="media-column">
+                <table cellspacing="0" border="0">
+                  {{#each badges.media}}
+                    <tr>
+                      <td style="padding-bottom: 6px;">
+                        <div class="badge-cell">
+                          <a href="{{url}}">
                             <img src="{{icon}}" alt="{{alt}}" width="14" height="14" style="vertical-align: middle; display: inline-block;">
                             <span>{{text}}</span>
-                          </div>
-                        </td>
-                      </tr>
-                    {{/each}}
-                  </table>
-                </td>
-
-                <!-- Media Column -->
-                <td style="vertical-align: top;" class="media-column">
-                  <table cellspacing="0" border="0">
-                    {{#each badges.media}}
-                      <tr>
-                        <!-- TODO: If last badge then no padding-bottom -->
-                        <td style="padding-bottom: 6px;">
-                          <div class="badge-cell">
-                            <a href="{{url}}">
-                              <img src="{{icon}}" alt="{{alt}}" width="14" height="14" style="vertical-align: middle; display: inline-block;">
-                              <span>{{text}}</span>
-                            </a>
-                          </div>
-                        </td>
-                      </tr>
-                    {{/each}}
-                  </table>
-                </td>
-              </tr>
-            </table>
-          </mj-raw>
-
-        </mj-column>
-      </mj-section>
-
-      <!-- Disclaimer -->
-      <mj-section mj-class="disclaimer-section">
-        <mj-raw>
-          <!-- Review: Fix this hack -->
-          <div class="disclaimer-wrapper">
+                          </a>
+                        </div>
+                      </td>
+                    </tr>
+                  {{/each}}
+                </table>
+              </td>
+            </tr>
+          </table>
         </mj-raw>
-        <mj-column>
-          <mj-text mj-class="disclaimer">
-            <strong>Disclaimer:</strong> {{disclaimer.text}}
-          </mj-text>
-        </mj-column>
-        <mj-raw>
-          </div>
-        </mj-raw>
-      </mj-section>
+      </mj-column>
+    </mj-section>
 
-    </mj-wrapper>
+    <!-- Disclaimer -->
+    <mj-section mj-class="disclaimer-section">
+      <mj-column>
+        <mj-text mj-class="disclaimer">
+          <strong>Disclaimer:</strong> {{disclaimer.text}}
+        </mj-text>
+      </mj-column>
+    </mj-section>
 
   </mj-body>
 </mjml>
