--- a/template/output.html
+++ b/template/output.html
@@ -40,16 +40,16 @@
     
     
     <style type="text/css">
-      @media only screen and (min-width:500px) {
-        .mj-column-px-100 { width:100px !important; max-width: 100px; }
+      @media only screen and (min-width:480px) {
+        .mj-column-per-100 { width:100% !important; max-width: 100%; }
+.mj-column-px-100 { width:100px !important; max-width: 100px; }
 .mj-column-per-75 { width:75% !important; max-width: 75%; }
-.mj-column-per-100 { width:100% !important; max-width: 100%; }
       }
     </style>
-    <style media="screen and (min-width:500px)">
-      .moz-text-html .mj-column-px-100 { width:100px !important; max-width: 100px; }
+    <style media="screen and (min-width:480px)">
+      .moz-text-html .mj-column-per-100 { width:100% !important; max-width: 100%; }
+.moz-text-html .mj-column-px-100 { width:100px !important; max-width: 100px; }
 .moz-text-html .mj-column-per-75 { width:75% !important; max-width: 75%; }
-.moz-text-html .mj-column-per-100 { width:100% !important; max-width: 100%; }
     </style>
     
     
@@ -57,7 +57,7 @@
     
     <style type="text/css">
 
-    @media only screen and (max-width:499px) {
+    @media only screen and (max-width:479px) {
       table.mj-full-width-mobile { width: 100% !important; }
       td.mj-full-width-mobile { width: auto !important; }
     }
@@ -166,7 +166,6 @@
       }
     </style>
     <!-- Import Google Fonts -->
-<!-- Set custom breakpoint -->
 <!-- Global Styles -->
 <!-- Information Attributes -->
 <!-- Custom CSS -->
@@ -182,10 +181,10 @@
       >
         <!-- Main Content -->
       
-      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="left-align-section-outlook" role="presentation" style="width:420px;" width="420" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="left-align-section-outlook" role="presentation" style="width:400px;" width="400" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     
       
-      <div  class="left-align-section" style="margin:0px auto;max-width:420px;">
+      <div  class="left-align-section" style="margin:0px auto;max-width:400px;">
         
         <table
            align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
@@ -195,12 +194,17 @@
               <td
                  style="direction:ltr;font-size:0px;padding:0;text-align:left;"
               >
-                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><![endif]-->
-      <!-- Profile Picture Column -->
-          <!--[if mso | IE]><td class="profile-image-outlook" style="vertical-align:top;width:100px;" ><![endif]-->
+                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="width:400px;" ><![endif]-->
             
       <div
-         class="mj-column-px-100 mj-outlook-group-fix profile-image" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
+         class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0;line-height:0;text-align:left;display:inline-block;width:100%;direction:ltr;"
+      >
+        <!--[if mso | IE]><table border="0" cellpadding="0" cellspacing="0" role="presentation" ><tr><![endif]-->
+          <!-- Profile Picture Column -->
+              <!--[if mso | IE]><td style="vertical-align:top;width:100px;" ><![endif]-->
+                
+      <div
+         class="mj-column-px-100 mj-outlook-group-fix profile-image" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:25%;"
       >
         
       <table
@@ -249,12 +253,12 @@
     
       </div>
     
-          <!--[if mso | IE]></td><![endif]-->
-    <!-- Main Content Column -->
-          <!--[if mso | IE]><td class="basic-content-column-outlook" style="vertical-align:top;width:315px;" ><![endif]-->
-            
+              <!--[if mso | IE]></td><![endif]-->
+          <!-- Main Content Column -->
+              <!--[if mso | IE]><td style="vertical-align:top;width:300px;" ><![endif]-->
+                
       <div
-         class="mj-column-per-75 mj-outlook-group-fix basic-content-column" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
+         class="mj-column-per-75 mj-outlook-group-fix basic-content-column" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:75%;"
       >
         
       <table
@@ -275,7 +279,7 @@
                 >
                   
       <div
-         style="font-family:Poppins, sans-serif;font-size:22px;font-weight:600;letter-spacing:0.02em;line-height:1.2;text-align:left;color:#423267;"
+         style="font-family:Poppins, sans-serif;font-size:20px;font-weight:600;letter-spacing:0.02em;line-height:1.2;text-align:left;color:#423267;"
       >Nouvelle L. Gonzalo, Esq.</div>
     
                 </td>
@@ -287,7 +291,7 @@
                 >
                   
       <div
-         style="font-family:Poppins, sans-serif;font-size:16px;font-weight:300;line-height:1.2;text-align:left;color:#8C7AB8;"
+         style="font-family:Poppins, sans-serif;font-size:15px;font-weight:300;line-height:1.2;text-align:left;color:#8C7AB8;"
       >Founder and Managing Attorney</div>
     
                 </td>
@@ -299,50 +303,50 @@
                 >
                   
       <div
-         style="font-family:Poppins, sans-serif;font-size:14px;line-height:1.2;text-align:left;color:#EE8C3A;"
+         style="font-family:Poppins, sans-serif;font-size:13px;line-height:1.2;text-align:left;color:#EE8C3A;"
       >Gonzalo Law PLLC</div>
     
                 </td>
               </tr>
             <!-- Social Icons Row --><table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
-            <tr>
-                <td>
-                  <a href="https://drive.google.com/file/d/1GM5KUXqPt8h7IftLfr_vE5OwG7WBC0W7/view" target="_blank" class="social-icons">
-                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/info-icon-container.png?raw&#x3D;true" alt="Info" width="24" height="24">
-                  </a>
-                </td>
-                <td>
-                  <a href="https://gonzalolaw.com/" target="_blank" class="social-icons">
-                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/globe-icon-container.png?raw&#x3D;true" alt="Website" width="24" height="24">
-                  </a>
-                </td>
-                <td>
-                  <a href="https://www.linkedin.com/in/nouvelle-gonzalo/" target="_blank" class="social-icons">
-                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/linkedin-icon-container.png?raw&#x3D;true" alt="LinkedIn" width="24" height="24">
-                  </a>
-                </td>
-                <td>
-                  <a href="https://www.instagram.com/gonzalolawpllc/" target="_blank" class="social-icons">
-                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/insta-icon-container.png?raw&#x3D;true" alt="Instagram" width="24" height="24">
-                  </a>
-                </td>
-                <td>
-                  <a href="https://www.youtube.com/@GonzaloLawPLLC?sub_confirmation&#x3D;1" target="_blank" class="social-icons">
-                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/youtube-icon-container.png?raw&#x3D;true" alt="YouTube" width="24" height="24">
-                  </a>
-                </td>
-                <td>
-                  <a href="tel:1-855-466-9256" target="_blank" class="social-icons">
-                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/phone-icon-container.png?raw&#x3D;true" alt="Phone" width="24" height="24">
-                  </a>
-                </td>
-                <td>
-                  <a href="mailto:ngonzalo@gonzalolaw.com" target="_blank" class="social-icons">
-                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/email-icon-container.png?raw&#x3D;true" alt="Email" width="24" height="24">
-                  </a>
-                </td>
-            </tr>
-          </table>
+              <tr>
+                  <td>
+                    <a href="https://drive.google.com/file/d/1GM5KUXqPt8h7IftLfr_vE5OwG7WBC0W7/view" target="_blank" class="social-icons">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/info-icon-container.png?raw&#x3D;true" alt="Info" width="24" height="24">
+                    </a>
+                  </td>
+                  <td>
+                    <a href="https://gonzalolaw.com/" target="_blank" class="social-icons">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/globe-icon-container.png?raw&#x3D;true" alt="Website" width="24" height="24">
+                    </a>
+                  </td>
+                  <td>
+                    <a href="https://www.linkedin.com/in/nouvelle-gonzalo/" target="_blank" class="social-icons">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/linkedin-icon-container.png?raw&#x3D;true" alt="LinkedIn" width="24" height="24">
+                    </a>
+                  </td>
+                  <td>
+                    <a href="https://www.instagram.com/gonzalolawpllc/" target="_blank" class="social-icons">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/insta-icon-container.png?raw&#x3D;true" alt="Instagram" width="24" height="24">
+                    </a>
+                  </td>
+                  <td>
+                    <a href="https://www.youtube.com/@GonzaloLawPLLC?sub_confirmation&#x3D;1" target="_blank" class="social-icons">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/youtube-icon-container.png?raw&#x3D;true" alt="YouTube" width="24" height="24">
+                    </a>
+                  </td>
+                  <td>
+                    <a href="tel:1-855-466-9256" target="_blank" class="social-icons">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/phone-icon-container.png?raw&#x3D;true" alt="Phone" width="24" height="24">
+                    </a>
+                  </td>
+                  <td>
+                    <a href="mailto:ngonzalo@gonzalolaw.com" target="_blank" class="social-icons">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/email-icon-container.png?raw&#x3D;true" alt="Email" width="24" height="24">
+                    </a>
+                  </td>
+              </tr>
+            </table>
         </tbody>
       </table>
     
@@ -351,6 +355,9 @@
         </tbody>
       </table>
     
+      </div>
+    
+              <!--[if mso | IE]></td></tr></table><![endif]-->
       </div>
     
           <!--[if mso | IE]></td></tr></table><![endif]-->
@@ -366,10 +373,10 @@
     
     <!-- Business Information -->
       
-      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="left-align-section-outlook" role="presentation" style="width:420px;" width="420" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="left-align-section-outlook" role="presentation" style="width:400px;" width="400" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     
       
-      <div  class="left-align-section" style="margin:0px auto;max-width:420px;">
+      <div  class="left-align-section" style="margin:0px auto;max-width:400px;">
         
         <table
            align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
@@ -379,7 +386,7 @@
               <td
                  style="direction:ltr;font-size:0px;padding:0;text-align:left;"
               >
-                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:420px;" ><![endif]-->
+                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:400px;" ><![endif]-->
             
       <div
          class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
@@ -515,10 +522,10 @@
     
     <!-- Disclaimer -->
       
-      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="left-align-section-outlook" role="presentation" style="width:420px;" width="420" bgcolor="hsl(35, 94%, 90%)" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="left-align-section-outlook" role="presentation" style="width:400px;" width="400" bgcolor="hsl(35, 94%, 90%)" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     
       
-      <div  class="left-align-section" style="background:hsl(35, 94%, 90%);background-color:hsl(35, 94%, 90%);margin:0px auto;max-width:420px;">
+      <div  class="left-align-section" style="background:hsl(35, 94%, 90%);background-color:hsl(35, 94%, 90%);margin:0px auto;max-width:400px;">
         
         <table
            align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:hsl(35, 94%, 90%);background-color:hsl(35, 94%, 90%);width:100%;"
@@ -528,7 +535,7 @@
               <td
                  style="direction:ltr;font-size:0px;padding:0;text-align:left;"
               >
-                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:420px;" ><![endif]-->
+                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:400px;" ><![endif]-->
             
       <div
          class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
